<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/side_distance"
    android:background="@color/colorBackground">

    <TextView
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/tv_welcome"
        android:textSize="@dimen/big_size"
        android:layout_height="wrap_content"
        android:text="@string/main_welcome"/>

    <TextView
        android:layout_below="@id/tv_welcome"
        android:id="@+id/tv_small_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_description"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/side_distance"
        android:layout_marginBottom="@dimen/side_distance"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tv_small_description">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_name"
                android:inputType="textCapWords"
                android:hint="@string/main_edit_text_hint"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_start"
            android:layout_marginTop="@dimen/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_text"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/btn_background"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_main_terms_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>