<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_size"
        android:textStyle="bold"
        android:visibility="visible"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/small_distance"
        android:layout_marginBottom="@dimen/distance"/>

    <LinearLayout
        android:layout_below="@+id/tv_question"
        android:id="@+id/ll_note"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/v_first"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@drawable/option_item_background"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/one"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/eq"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/distance"
                android:layout_marginStart="@dimen/distance"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="italic"
                android:id="@+id/tv_answer_one_note"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/small_distance">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/v_seventh"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@drawable/option_item_background"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/seven"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/eq"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/distance"
                android:layout_marginStart="@dimen/distance"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="italic"
                android:id="@+id/tv_answer_seven_note"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_below="@+id/ll_note"
        android:layout_width="match_parent"
        android:id="@+id/fl_choosing"
        android:layout_height="@dimen/chooser_fragment_size"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/extra_big_char_size"
            android:textColor="@color/colorAccent"/>

    </FrameLayout>

</RelativeLayout>